# soma

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  cdk.json  pyproject.toml  requirements.txt
.bruno/: README.md  bruno.json
.streamlit/: secrets.toml.example
dashboard/: Dockerfile  app.py  auth.py
infrastructure/: README.md  app.py  requirements.txt
pipeline/: __init__.py  alarm_notify.py  apple_health_cardio_dedup.py  apple_health_webhook_event.py  apple_hevy_cardio_dedup.py  athlete_journal.py  biometrics_upsert.py  briefing.py  caldav_scheduled_ingest.py  cardio_quality.py  cardio_training_load.py  cardio_upsert.py  clients.py  coaching_chat.py  dashboard_queries.py  db_session.py  delivery.py  dropbox_api.py  features.py  fit_ingest.py  ftp_estimate.py  goal_progress.py  goal_tools.py  guidelines.py  guidelines_corpus.py  hevy_scheduled_ingest.py  history_query.py  interventions_upsert.py  lambda_secrets.py  metric_baselines.py  metric_patterns.py  metrics_summary.py  mileage_ramp.py  orchestration.py  pace_thresholds.py  persistence.py  power_cardio_dedup.py  power_math.py  power_source_priority.py  raw_storage.py  (+17 more)
schema/: soma-planned-schema.sql
scripts/: README.md  backfill_cardio_source_app.py  cleanup_apple_cardio_near_dupes.py  condense_expert_principles.py  dropbox_oauth_refresh_token.py  guidelines-corpus.md  run_wahoo_fit_ingest.sh  smoke_apple_health.py  smoke_caldav.py  smoke_hevy.py  smoke_strava.py
tests/: conftest.py  test_alarm_notify.py  test_alarm_notify_handler.py  test_apple_health_cardio_dedup.py  test_athlete_journal.py  (+59 more)
(+95 files in other folders)
