[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "soma"
version = "0.1.0"
description = "Personal health data pipeline and coaching system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "sqlglot>=26", "python-dotenv>=1.0", "boto3>=1.34", "icalendar>=6"]
cdk = [
    "aws-cdk-lib>=2.160,<3",
    "constructs>=10.3,<11",
]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
